--- a/SPM Assignment Ngee Ann City/SPM Assignment Ngee Ann City/SPM Assignment Ngee Ann City.csproj
+++ b/SPM Assignment Ngee Ann City/SPM Assignment Ngee Ann City/SPM Assignment Ngee Ann City.csproj
@@ -8,4 +8,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Include="D:\Ngee Ann Poly\SPM\Git Repo\Classes.cs" Link="Classes.cs" />
+  </ItemGroup>
+
 </Project>
