add edit csproj for spm assignment ngee ann city

--- a/SPM Assignment Ngee Ann City/SPM Assignment Ngee Ann City.csproj
+++ b/SPM Assignment Ngee Ann City/SPM Assignment Ngee Ann City.csproj
@@ -8,4 +8,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Update="saved_game_data_arcade.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
